[package]
name = "bjig_controller"
version = "0.1.0"
edition = "2021"
authors = ["bathtimefish"]
description = "Rust library for controlling BraveJIG USB Router via bjig CLI"
license = "MIT"
repository = "https://github.com/bathtimefish/bjig_controller"

[dependencies]
tokio = { version = "1", features = ["process", "rt-multi-thread", "io-util", "time", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
log = "0.4"

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.11"
